--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		
-		
-    
     <!-- BOOTSTRAP -->
     <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- FONT AWESOME -->
@@ -17,6 +13,24 @@
     <link href="/static/assets/css/loader.css" rel="stylesheet">
     <link href="/static/assets/css/workspace.css" rel="stylesheet">
     <style>
+      * {
+        box-sizing: border-box;
+      }
+      
+      .column {
+        float: left;
+        width: 25%;
+        padding: 5px;
+      }
+      
+      /* Clearfix (clear floats) */
+      .row::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+      </style>
+    <style>
       #customers {
         font-family: Arial, Helvetica, sans-serif;
         border-collapse: collapse;
@@ -24,17 +38,13 @@
         margin-left: auto;
         margin-right: auto;
       }
-      
       #customers td, #customers th {
         border: 1px solid rgb(0, 0, 0);
         padding: 8px;
         text-align: center;
       }
-      
       #customers tr:nth-child(even){background-color: #f2f2f2;}
-      
       #customers tr:hover {background-color: rgb(218, 245, 136);}
-      
       #customers th {
         padding-top: 12px;
         padding-bottom: 12px;
@@ -45,20 +55,13 @@
       }
       </style>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-          
           <script>
             function updateImage() {
-            
             obj = document.imagename;
-         
             obj.src = obj.src.split("?")[0] + "?" + new Date().getTime();
-         
             //Following statement sets the delay before the function will
-         
             //call itself again (in milliseconds)
-         
             setTimeout("updateImage()",1000);
-         
          }
               $(document).ready(function(){
                   $(".dataframe tr").click(function(){
@@ -216,43 +219,73 @@
                 
                 
             </article>
-            <article id="grafana" >
-                <h2 class="major">Grafana Dashboard</h2>
-                <div>
-                    <iframe width="1300" height="650" src="https://apc01.safelinks.protection.outlook.com/?url=http%3A%2F%2Fa5d5ec501952b4e8eb09886c9408e3a9-1473537899.ap-south-1.elb.amazonaws.com%3A3000%2Fd%2F4h_Ns0V7z%2Fprediction-analytics&data=04%7C01%7Camit.chakraborty%40hcl.com%7Cffe2a8bb8fd54c4dfdda08d987068d2c%7C189de737c93a4f5a8b686f4ca9941912%7C0%7C0%7C637689284469703526%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=jnB5GHkvQ%2Fm%2FIyWvV4R11ZhOY7MA04bVTAJkuFwphE4%3D&reserved=0" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-            </article>	
+            
             
             <article id="dashboards" >
               <div>
-                <div> 
-                  <object type="text/html" data="https://apc01.safelinks.protection.outlook.com/?url=http%3A%2F%2Fa5d5ec501952b4e8eb09886c9408e3a9-1473537899.ap-south-1.elb.amazonaws.com%3A3000%2Fd%2F4h_Ns0V7z%2Fprediction-analytics&data=04%7C01%7Camit.chakraborty%40hcl.com%7Cffe2a8bb8fd54c4dfdda08d987068d2c%7C189de737c93a4f5a8b686f4ca9941912%7C0%7C0%7C637689284469703526%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=jnB5GHkvQ%2Fm%2FIyWvV4R11ZhOY7MA04bVTAJkuFwphE4%3D&reserved=0" width="97%" height="750px" style="overflow:auto;border:0px ridge blue">
-                  </object>
+                <div>
+                  <div class="row">
+                    <div class="column">
+                      <a href="http://a5d5ec501952b4e8eb09886c9408e3a9-1473537899.ap-south-1.elb.amazonaws.com:3000/login" target="_blank" rel="noopener noreferrer">
+                      <img src="static/images/grafana.png" alt="Grafana" style="width:50%">
+                    </a>
+                    </div>
+                    <div class="column">
+                      <a href="http://15.207.94.167:5601/app/kibana#/dashboard/4ab4bc50-2748-11ec-ac7f-d9f63dec039c?_g=(refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" target="_blank" rel="noopener noreferrer">
+                      <img src="static/images/kibana.png" alt="Kibana" style="width:50%">
+                    </a>
+                    </div>
+                    <div class="column">
+                      <a href="http://15.207.94.167:5000/#/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/images/mlflow.png" alt="MLFlow" style="width:50%">
+                    </a>
+                    </div>
+                    <div class="column">
+                      <a href="http://15.207.94.167:8080/admin/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/images/airflow.png" alt="Airflow" style="width:50%">
+                    </a>
+                    </div>
+                  </div>
+                </div>
+                <div>
+              <div>
+                <div>
+                  <img src="static/images/kibana.png" alt="Kibana" padding = "5px" style="width:25%">
                 </div>
                 <div> 
-                  <object type="text/html" data="http://52.66.83.49:5601/app/kibana#/dashboard/4ab4bc50-2748-11ec-ac7f-d9f63dec039c?_g=(refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" width="97%" height="600px" style="overflow:auto;border:0px ridge blue">
+                  <object type="text/html" data="http://15.207.94.167:5601/app/kibana#/dashboard/4ab4bc50-2748-11ec-ac7f-d9f63dec039c?_g=(refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" width="99%" height="600px" style="overflow:auto;border:0px ridge blue">
                   </object>
               </div>
-              <div> 
-                <object type="text/html" data="http://15.207.94.167:5000/#/" width="97%" height="600px" style="overflow:auto;border:0px ridge blue">
-                </object>
+            </div>
+            <div>
+              <div>
+                <img src="static/images/mlflow.png" alt="MLFlow" style="width:25%">
               </div>
               <div> 
-                <object type="text/html" data="http://15.207.94.167:8080/admin/" width="97%" height="600px" style="overflow:auto;border:0px ridge blue">
+                <object type="text/html" data="http://15.207.94.167:5000/#/" width="99%" height="600px" style="overflow:auto;border:0px ridge blue">
                 </object>
               </div>
+            </div>
+            <div>
+              <div>
+                <img src="static/images/airflow.png" alt="Airflow" style="width:25%">
+              </div>
               <div> 
+                <object type="text/html" data="http://15.207.94.167:8080/admin/" width="99%" height="600px" style="overflow:auto;border:0px ridge blue">
+                </object>
+              </div>
+            </div>
+            </div>
+              <!-- <div> 
                 <object type="text/html" data="http://127.0.0.1:5000/" width="100%" height="600px" style="overflow:auto;border:0px ridge blue">
                 </object>
-              </div>
+              </div> -->
         </div>
               
           </article>
 
     </div>
 </div>
-
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
