updated dashboard - minor changes

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -94,7 +94,7 @@
       <ul class="nav-items">
         <!-- Navigation -->
         <li class="nav-item"><a href="#intro">Introduction</a></li>
-        <li class="nav-item"><a href="https://studio.iterative.ai/team/MLOps-team/views/gradient-boosting-dvc-cml-c7h5xnadby" target="_blank" rel="noopener noreferrer">Model Experiments</a></li>
+        <li class="nav-item"><a href="https://studio.iterative.ai/team/MLOps-team/views/gradient-boosting-dvc-cml-c7h5xnadby" target="_blank" rel="noopener noreferrer"> Experiments </a></li>
         <!-- <li class="nav-item"><a href="#xgboost">Model Deployment</a></li> -->
         <!-- <li class="nav-item"><a href="#">Contact</a></li> -->
         <!-- Dropdown menu -->
@@ -109,7 +109,7 @@
             </li>
           </ul>
         </li> -->
-        <li class="nav-item"><a href="#batch-processing">Model Deployment</a></li>
+        <li class="nav-item"><a href="#batch-processing"> Deployment </a></li>
         <li class="nav-item"><a href="#dashboards">Dashboard</a></li>
         <!-- <li class="nav-item nav-item-dropdown">
           <a class="dropdown-trigger" href="#">Model Monitoring</a>
@@ -226,31 +226,41 @@
                 <div>
                   <div class="row">
                     <div class="column">
+                      <p><em>Continuous Monitoring </em></p>
                       <a href="http://a5d5ec501952b4e8eb09886c9408e3a9-1473537899.ap-south-1.elb.amazonaws.com:3000/login" target="_blank" rel="noopener noreferrer">
                       <img src="static/images/grafana.png" alt="Grafana" style="width:50%">
                     </a>
+                    <p><small>Analyzing and visualizing metrics</small></p>
                     </div>
                     <div class="column">
+                      <p><em>Continuous Monitoring </em></p>
                       <a href="http://15.207.94.167:5601/app/kibana#/dashboard/4ab4bc50-2748-11ec-ac7f-d9f63dec039c?_g=(refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" target="_blank" rel="noopener noreferrer">
                       <img src="static/images/kibana.png" alt="Kibana" style="width:50%">
                     </a>
+                    <p><small>Analyzing log messages</small></p>
                     </div>
                     <div class="column">
+                      <p><em>Continuous Training </em></p>
                       <a href="http://15.207.94.167:5000/#/" target="_blank" rel="noopener noreferrer">
                       <img src="static/images/mlflow.png" alt="MLFlow" style="width:50%">
                     </a>
+                    <p><small>Dashboard comparing MLflow runs notebook</small></p>
                     </div>
                     <div class="column">
+                      <p><em>Continuous Training </em></p>
                       <a href="http://15.207.94.167:8080/admin/" target="_blank" rel="noopener noreferrer">
                       <img src="static/images/airflow.png" alt="Airflow" style="width:50%">
                     </a>
+                    <p><small>Programmatically author, schedule, and monitor workflows</small></p>
                     </div>
                   </div>
                 </div>
                 <div>
               <div>
                 <div>
+                  <a href="http://15.207.94.167:5601/app/kibana#/dashboard/4ab4bc50-2748-11ec-ac7f-d9f63dec039c?_g=(refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" target="_blank" rel="noopener noreferrer">
                   <img src="static/images/kibana.png" alt="Kibana" padding = "5px" style="width:25%">
+                </a>
                 </div>
                 <div> 
                   <object type="text/html" data="http://15.207.94.167:5601/app/kibana#/dashboard/4ab4bc50-2748-11ec-ac7f-d9f63dec039c?_g=(refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" width="99%" height="600px" style="overflow:auto;border:0px ridge blue">
@@ -259,7 +269,9 @@
             </div>
             <div>
               <div>
+              <a href="http://15.207.94.167:5000/#/" target="_blank" rel="noopener noreferrer">
                 <img src="static/images/mlflow.png" alt="MLFlow" style="width:25%">
+              </a>
               </div>
               <div> 
                 <object type="text/html" data="http://15.207.94.167:5000/#/" width="99%" height="600px" style="overflow:auto;border:0px ridge blue">
@@ -268,7 +280,9 @@
             </div>
             <div>
               <div>
+                <a href="http://15.207.94.167:8080/admin/" target="_blank" rel="noopener noreferrer">
                 <img src="static/images/airflow.png" alt="Airflow" style="width:25%">
+              </a>
               </div>
               <div> 
                 <object type="text/html" data="http://15.207.94.167:8080/admin/" width="99%" height="600px" style="overflow:auto;border:0px ridge blue">
